...
    return BlocConsumer<ChangeMobileInteractor, ChangeMobileState>(
      listener: (context, state) {
        if (state.failure != null) {
          context.showFlashError(state.failure!.error.message);
        }
        if (state.isUpdateSuccess) {
          context.showFlashSuccess("Cập nhật số điện thoại thành công");
          Future.delayed(const Duration(seconds: 1), () {
            interactor.router?.pop();
          });
        }
      },
      builder: (context, state) {
...
                  await interactor.sendSmsCode(phone);
                  return interactor.state.failure == null;
                },
              ),
              const SizedBox(height: 40),
              AppButton(
                text: "Cập Nhật",
                isLoading: state.isLoading,
                style: TMLabsButtonStyle.primary,
                onPressed: _onUpdate,
              ),
            ],
          ),
...
