...
      keyboardType: TextInputType.number,
      suffix: InkWell(
        onTap: _handleSendCode,
        child: Padding(
          padding: const EdgeInsets.symmetric(vertical: 8.0),
          child: Text(
            _isCountingDown ? "Gửi lại (${_start}s)" : (_isSending ? "..." : "Gửi mã"),
            style: TMLabsTextStyle.bodyBold.copyWith(
              color: _isCountingDown || _isSending ? TMLabsColor.lightGrey : TMLabsColor.primary,
            ),
          ),
        ),
      ),
...
